@@ -41,14 +41,6 @@
   <correct>alin=omaa</correct>
 </replacement>
 <replacement>
-  <incorrect>alkaa tekemään</incorrect>
-  <correct>alkaa tehdä</correct>
-</replacement>
-<replacement>
-  <incorrect>alkoi tekemään</incorrect>
-  <correct>alkoi tehdä</correct>
-</replacement>
-<replacement>
   <incorrect>alla=mainittu</incorrect>
   <correct>alla mainittu</correct>
 </replacement>
