@@ -34,6 +34,8 @@
 #define GCERR_FOREIGN_QUOTATION_MARK 11
 #define GCERR_MISPLACED_CLOSING_PARENTHESIS 12
 #define GCERR_NEGATIVE_VERB_MISMATCH 13
+#define GCERR_A_INFINITIVE_REQUIRED 14
+#define GCERR_MA_INFINITIVE_REQUIRED 15
 
 namespace libvoikko {
 
